--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <title>
             Guitar Pricer
         </title>
+        <link href="./css/styles.css" rel="stylesheet">
     </header>
 
-    <body ng-app="GuitarPricerApp">
+    <body class="mainGrid" ng-app="GuitarPricerApp">
 
         <nav ng-include="'app/nav/partials/navigation.html'"></nav>
 
