creating user intake form and routing partials for user nav

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <nav ng-include="'app/nav/partials/navigation.html'"></nav>
 
+
         <div ng-view></div>
 
     
@@ -27,6 +28,8 @@
         <script src="./app/guitars/factories/GuitarFactory.js"></script>
         <script src="./app/guitars/controllers/WelcomeSearchesCtrl.js"></script>
         <script src="./app/guitars/controllers/UserHomePageCtrl.js"></script>
+        <script src="./app/guitars/controllers/AdvancedSearchCtrl.js"></script>
+        <script src="./app/userGear/controllers/UserNavCtrl.js"></script>
     
     </body>
 </html>
