working on creating and storing user guitars

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         <script src="./app/guitars/controllers/WelcomeSearchesCtrl.js"></script>
         <script src="./app/guitars/controllers/UserHomePageCtrl.js"></script>
         <script src="./app/guitars/controllers/AdvancedSearchCtrl.js"></script>
+        <script src="./app/userGear/factories/UserGearFactory.js"></script>
         <script src="./app/userGear/controllers/UserNavCtrl.js"></script>
+        <script src="./app/userGear/controllers/GuitarIntakeCtrl.js"></script>
+
     
     </body>
 </html>
