added google font to font family

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>
             Guitar Pricer
         </title>
+        <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
         <link href="./css/mainGrid.css" rel="stylesheet">
         <link href="./css/navBar.css" rel="stylesheet">
         <link href="./css/userNav.css" rel="stylesheet">
