began making grid for adv search styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="./css/navBar.css" rel="stylesheet">
         <link href="./css/userNav.css" rel="stylesheet">
         <link href="./css/basicSearch.css" rel="stylesheet">
+        <link href="./css/advSearch.css" rel="stylesheet">
         
     </header>
 
