updated adv search radio buttons with font awesome icons and angularjs hide show

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!doctype html>
 
 <html lang="en">
-    <header>
+    <head>
         <meta charset="utf-8">
         <title>
             Guitar Pricer
         </title>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
         <link href="./css/mainGrid.css" rel="stylesheet">
         <link href="./css/navBar.css" rel="stylesheet">
         <link href="./css/userNav.css" rel="stylesheet">
         <link href="./css/basicSearch.css" rel="stylesheet">
         <link href="./css/advSearch.css" rel="stylesheet">
-        
-    </header>
+  
+    </head>
 
     <body class="mainGrid" ng-app="GuitarPricerApp">
 
