styling adv search results and debugging std dev errors

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="./css/userNav.css" rel="stylesheet">
         <link href="./css/basicSearch.css" rel="stylesheet">
         <link href="./css/advSearch.css" rel="stylesheet">
+        <link href="./css/advSearchResults.css" rel="stylesheet">
   
     </head>
 
