added styling for new guitar entry and began styling for user guitar display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <link href="./css/basicSearch.css" rel="stylesheet">
         <link href="./css/advSearch.css" rel="stylesheet">
         <link href="./css/advSearchResults.css" rel="stylesheet">
-  
+        <link href="./css/userIntake.css" rel="stylesheet">
+        <link href="./css/displayUserGear.css" rel="stylesheet">
     </head>
 
     <body class="mainGrid" ng-app="GuitarPricerApp">
