added styles and animations

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <link href="./css/userIntake.css" rel="stylesheet">
         <link href="./css/displayUserGear.css" rel="stylesheet">
         <link href="./css/angularAnimations.css" rel="stylesheet">
+        <link href="./css/auth.css" rel="stylesheet">
+        
         
     </head>
 
